Added instructions on how to run actual game